Added firebase packages to project

--- a/Magical slime. Triple choice/.gitignore
+++ b/Magical slime. Triple choice/.gitignore
@@ -11,6 +11,7 @@
 /[Uu]ser[Ss]ettings/
 /Assets/ExternalDependencyManager/
 /Assets/Plugins/
+/Assets/Firebase/
 /Magical slime. Triple choice_BurstDebugInformation_DoNotShip/
 /Magical slime. Triple choice-Beta_BurstDebugInformation_DoNotShip/
 
